# TestFFMPEG

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yy/linux/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-cmd.cpp
app/src/main/cpp/ffmpeg/: config.h  ffmpeg.c
app/src/main/cpp/ffmpeg/libavcodec/: libavcodec.pc  libavcodec.ver
app/src/main/cpp/ffmpeg/libavdevice/: android_camera.d  libavdevice.pc  libavdevice.so_
app/src/main/cpp/ffmpeg/libavfilter/: libavfilter.pc
app/src/main/cpp/ffmpeg/libavformat/: libavformat.pc
app/src/main/cpp/ffmpeg/libavutil/: libavutil.pc  libavutil.so_
app/src/main/cpp/ffmpeg/libswresample/: libswresample.pc  libswresample.so.3
app/src/main/cpp/ffmpeg/libswscale/: libswscale.pc  libswscale.so.5
app/src/main/java/com/yy/linux/: FFmpegCmd.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yy/linux/: ExampleUnitTest.java
